added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My simple website </title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div class="circle">
+        <h3> My first website </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et qui ipsa laudantium autem distinctio repellendus omnis, laborum, sed dignissimos eaque minima corrupti voluptatibus delectus? Tempore praesentium reiciendis voluptatem cumque id?</p>
+    </div>
     
 </body>
 </html>
